Reach zero compile errors on Forge 1.20.1 (seam work 5)
Compile slice 334 -> 0 (probe tool; final tree compiled live, then
reproduced through the build cache - a second live javac would need
--no-build-cache which the probe forbids). The whole day: 10094 -> 0.

- Worldgen trio: BootstapContext (1.20.1 typo included), Forge registry
  keys, SpawnPlacementRegisterEvent with the same Operation.OR, beacons and
  streets back to the saveWithoutMetadata/load pair - the 1.7.10
  writeToNBT/readFromNBT form; the ValueIO bridge class is gone entirely.
- Block contract aligned per signature rule (neighborChanged, updateShape,
  occlusion, clone-stack, onRemove gate instead of 26.x
  affectNeighborsAfterRemoval, weaker-access round two).
- GUI F14: GuiGraphics frame with the literal vanilla render order;
  IForgeMenuType, ClickType.ordinal() as the 1.7.10 numeric mode.
- Jade on the 11.13.3 contract: one GT6ToolHandler for all 19 tool types,
  flat-string handler names prefixed gregtech: so vanilla handlers are not
  shadowed; showcase semantics untouched.
- Chest loot identity via SetNbtFunction - the exact stack
  WeightedRandomChestContent carried in 1.7.10; SetItemDamageFunction
  deliberately rejected (it would silently zero GT6 subtypes).
- Enchantment currency finished tree-wide; MobType returns as the direct
  EnumCreatureAttribute equivalent - and the 26.x damage-model divergence
  disappears with it.
- AT third line: ChunkMap.getVisibleChunkIfPresent public (server-side BE
  dynamic light has no public thread-gated path on 1.20.1).
- BlockBaseRail.onMinecartPass body restored verbatim from the original.

BP-TODO: 0 across the tree. No net.neoforged imports remain. Runtime is
entirely unverified - the named risk list lives in the work log.
Work log: workspace/tasks/b1201-wave3/journal.md (seam work 5).